# syncable-cli-mcp-server

./: .gitignore  LICENSE  README.md  release-plz.toml  test_analysis.py  test_simple_client.py
.cursor/rules/: project-rules.mdc  rust-mcp-sdk.mdc
.github/: dependabot.yml
.github/workflows/: release-plz.yml
mcp-python-server-client/: README.md  pyproject.toml
mcp-python-server-client/src/: agno_sse_demo.py  agno_stdio_demo.py  langgraph_mcp_py_client_rust_server_sse.py  langgraph_sse_demo.py  langgraph_stdio_demo.py  mcp_py_client_rust_server_sse.py  mcp_py_client_rust_server_stdio.py  py_client_sse.py  py_client_stdio.py  sse_server.py  stdio_client.py  stdio_server.py  utils.py
mcp-rust-server/: Cargo.toml  README.md
mcp-rust-server/cli/: Cargo.toml
mcp-rust-server/cli/scripts/: install-vuln-tools.sh
mcp-rust-server/cli/src/: cli.rs  error.rs  lib.rs  main.rs
mcp-rust-server/cli/src/analyzer/: dependency_parser.rs  display.rs  docker_analyzer.rs  framework_detector.rs  language_detector.rs  mod.rs  monorepo_detector.rs  project_context.rs  security_analyzer.rs  tool_installer.rs  vulnerability_checker.rs
mcp-rust-server/cli/src/analyzer/frameworks/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
mcp-rust-server/cli/src/analyzer/security/: config.rs  core.rs  mod.rs  patterns.rs
mcp-rust-server/cli/src/analyzer/security/turbo/: README.md  cache.rs  file_discovery.rs  mod.rs  pattern_engine.rs  results.rs  scanner.rs
mcp-rust-server/cli/src/common/: command_utils.rs  file_utils.rs  mod.rs
mcp-rust-server/cli/src/config/: mod.rs  types.rs
mcp-rust-server/cli/src/generator/: compose_gen.rs  dockerfile_gen.rs  mod.rs  templates.rs  terraform_gen.rs
mcp-rust-server/src/: handler.rs  main.rs  main_sse.rs  tools.rs
rust-mcp-server-syncable-cli/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh  release-plz.toml
rust-mcp-server-syncable-cli/src/: handler.rs  lib.rs  main.rs  main_rest.rs  main_sse.rs  tools.rs
rust-mcp-server-syncable-cli/src/schema/: schema_utils.rs
rust-mcp-server-syncable-cli/src/tests/: handler_tests.rs  mod.rs
