[project]
name = "ai-agents-mcp"
version = "0.1.0"
description = "Demo examples to use for AI Agents with MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.4",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "mcp[cli]>=1.9.3",
    "python-dotenv>=1.1.0",
    "rich>=13.0.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.0.0",
]
