[package]
name = "mcp-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
rust-mcp-sdk = "0.4.2"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt","env-filter"] }


[[bin]]
name = "mcp-stdio"
path = "src/main.rs"

[[bin]]
name = "mcp-sse"
path = "src/main_sse.rs"
