[package]
name = "mcp-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP server dependencies
async-trait = "0.1.88"
rust-mcp-sdk = "0.4.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt","env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"

# Local CLI library
syncable-cli = { path = "cli" }

[[bin]]
name = "mcp-stdio"
path = "src/main.rs"

[[bin]]
name = "mcp-sse"
path = "src/main_sse.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[example]]
name = "check_vulnerabilities"
path = "examples/check_vulnerabilities.rs"

[[example]]
name = "security_analysis"
path = "examples/security_analysis.rs"

