[package]
name = "syncable-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
walkdir = "2"
tera = "1"
indicatif = "0.17"
regex = "1"
glob = "0.3"
once_cell = "1"
rayon = "1.7"
termcolor = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
prettytable = "0.10"
term_size = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rustsec = "0.30"
textwrap = "0.16"
tempfile = "3"
dirs = "6"
aho-corasick = "1.1"
memmap2 = "0.9"
dashmap = "5"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
blake3 = "1.5"
regex-automata = "0.4"
num_cpus = "1.16"
parking_lot = "0.12"
ahash = "0.8"
bstr = "1.9"
simdutf8 = "0.1"

[lib]
name = "syncable_cli"
path = "src/lib.rs"

[[bin]]
name = "sync-ctl"
path = "src/main.rs" 